# research-artifacts-concurrent-trees

./: .gitignore  README.md
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cpp/.devcontainer/: Dockerfile  devcontainer.json
cpp/cmake/: boost.cmake  ccache.cmake  compiler-warnings.cmake  cppcheck.cmake  rapidcheck.cmake  spdlog.cmake
cpp/cppcheck/: suppressions.txt
cpp/scripts_bash/: check_format.sh
cpp/scripts_python/: extract_json_from_logs.py
cpp/src/: CMakeLists.txt  main_main.cpp
cpp/src/algorithms/: avl_sequential_chunked_recursive_map_based.hpp  avl_sequential_standard.hpp  ikvs.hpp  render_debug.hpp
cpp/src/algorithms/tests/: CMakeLists.txt  avl_sequential_chunked_recursive_map_based_rapid.cpp  avl_sequential_standard_rapid.cpp  hashmap_rapid.cpp  kvs_rapid_harness.hpp
cpp/src/benchmark/: CMakeLists.txt
cpp/src/install_smokes/: smoke_cpp20stdlib.hpp  smoke_spdlog.hpp
cpp/src/tests/: CMakeLists.txt  concurrency_primitives.cpp  concurrency_primitives_applied_to_tree.cpp  example.cpp  rapidcheck_with_gtest_example.cpp  without_logging.cpp
cpp/src/util/: enum_array.hpp  injector.hpp  log.hpp  overloaded.hpp  safe_reinterpret.hpp
debugger/: .gitignore  README.md  README_app.md  package.json  tsconfig.json
debugger/src/: App.tsx
java/: .gitignore  README.md  build.gradle  settings.gradle
java_tla/: .gitignore  README.md  pom.xml
scratch/: todot.py
tla/: .gitignore  README.md  go.sh  hint.txt  interpret.py  log.json  notes.md
tla/scripts_python/: count_labels_in_tla_files.py  erase_all_translations_in_tla_files.py  (+4 more)
(+210 files in other folders)
